<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter App</string>
    <string name="title_login">CodePathTwitter</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="compose_text">Compose tweet</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="charleft">Characters left:</string>
    <string name="hintTweetCompose">What\'s happening?</string>
    <string name="defCharLimit">140</string>
    <string name="tweet">Tweet</string>
    <string name="logoString">Twitter Logo</string>
    <string name="descIcon">Twitter Icon of User</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tweet">TWEET</string>

</resources>